# TChess

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  build_release.sh
src/: main.cpp
src/Game/: Board.cpp  Board.h  Game.cpp  Game.h  Pawn.cpp  Pawn.h  Scene.cpp  Scene.h
src/PCH/: sdafx.cpp  sdafx.h
src/Utils/: xstdf.h
